--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer>
 
 	<p>Made with <span id="heart">💚</span></p>
+  <p><a href="mailto:carmenchow@protonmail.com">carmenchow@protonmail.com</a></p>
 
 </footer>
