--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -1,64 +1,74 @@
 html,
 body
-	height 100%
-
+  height 100%
+  background pageBg 
 
 $bg
-	background main
-	height 100%
-	.content
-		width 95%
-		align(both)
-		text-align center
+  background main
+  height 100%
+  .content
+    width 95%
+    align(both)
+    text-align center
 
 // Header home
 .header-site
-	@extends $bg
-	li
-		margin 0
-		list-style-type none
-	.person
-		img
-			size(130, 130)
-			border-radius 100%
-	.recent
-		+below(320px)
-			&:last-child
-				display none
-		center(450px)
-			
-		p
-			text-align left
-			color white
-		a
-			text-decoration none
-			h2
-				text-align left
-				margin 0
-				font-weight 300
-				font-size rem(17px)
-				border-bottom 1px solid rgb(135, 116, 169)
-				&:hover
-					background rgba(135,116,169,0.42)
-	h1,h2
-		color: sec
-		text-align center
-	.site-title
-		font-size rem(30px)
-		line-height 1
-		display block
-		font-variant-ligatures none 
-		letter-spacing 9px
-		+above(cut)
-			letter-spacing 16px
-			margin-bottom 0
-			font-size rem(20px)
-	.site-description
-		font-size rem(20px)
-		display block
-		margin rem(30px) 0
-		+above(cut)
-			font-size rem(40px)
+  @extends $bg
+  li
+    margin 0
+    list-style-type none
+  .person
+    img
+      size(130, 130)
+      border-radius 100%
+  .recent
+    +below(320px)
+      &:last-child
+        display none
+    center(400px)
+    p
+      text-align left
+      color white
+    h2,h3
+      font-weight 300
+      text-align left
+    h2
+      color texts
+      font-size rem(20px)
+      &:before
+        content "#"
+        color accent2
+        margin-right 2px
+    a
+      text-decoration none
+      h3
+        font-size rem(17px)
+        color sec 
+        margin 0
+        border-bottom 1px solid rgb(135, 116, 169)
+        &:hover
+          background rgba(135,116,169,0.42)
+
+  h1
+  	color sec
+  	text-align center
+  a.site-title
+    text-decoration none
+    color sec
+    line-height 1
+    display block
+    font-variant-ligatures none 
+    letter-spacing 9px
+    +above(cut)
+      letter-spacing 16px
+      margin-bottom 0
+      font-size rem(25px)
+  .site-description
+    font-size rem(20px)
+    display block
+    margin rem(30px) 0
+    +above(cut)
+      font-size rem(40px)
 
 // Header Post
 .header-post
@@ -69,9 +79,9 @@ $bg
 		#open
 			position fixed
 			background transparent
-	p
+	h2
 		margin 0
-		padding-top 23px
+		padding-top 15px
 		text-align center
 		color sec
 		
