--- a/src/styl/_icons.styl
+++ b/src/styl/_icons.styl
@@ -6,19 +6,19 @@ size(width = 30, height = 30)
     text-align center
     a
         display inline-block
-        padding rem(15px)
-        margin rem(2px)
+        padding rem(12px)
+        margin rem(4px)
         border-radius 50%
-        border rem(2px) solid sec
+        border rem(2px) solid sec 
         line-height 0
         transition all .7s
         .icon
             fill sec
-            size(18,18)
+            size(15,15)
             +above(cut)
                 size()
         &:hover
-            background sec
+            background texts 
             .icon
                 fill main
 
