--- a/src/styl/_menu.styl
+++ b/src/styl/_menu.styl
@@ -91,7 +91,7 @@ aside
                 display inline-block
                 // margin-left -5px
                 &:first-child
-                    background #EFB102
+                    background accent
                     padding 4px 10px 4px 20px
                     margin-left -10px
                     span
@@ -99,7 +99,7 @@ aside
                         size(20, 20)
                         text-align center
                         background-color black
-                        color #EFB102
+                        color accent
                         font-weight 300
                 &:nth-child(3)
                     background mainLight
