--- a/src/styl/_variables.styl
+++ b/src/styl/_variables.styl
@@ -1,12 +1,16 @@
 // COLORS
-main = #5d4d7a;
-mainHover = rgba(135, 116, 169, 0.42);
+main = #5d4d7a
+mainHover = rgba(135, 116, 169, 0.40)
+links = lighten(main, 20%)
 hover = darken(main, 50%)
 mainLight = #AB67AB
 sec  = #FFFFFF
 lightGray = #F2F2F2
-texts = #333333
-colorcode = #615576
+pageBg = darken(main, 50%)
+texts = lighten(main, 60%)
+accent = #EFB102 // gold
+accent2 = #489472 // sea green
+colorcode = #EFB102
 blackBase =  #2f2f33
 neotree = #2f2f33
 // Resolution
