--- a/src/styl/_elements.styl
+++ b/src/styl/_elements.styl
@@ -2,17 +2,18 @@
     margin-top rem(30px)
     a
         font-size rem(14px)
-        color main
+        color accent
         display inline-block
-        border 1px solid main
+        border 1px solid accent
         border-radius rem(5px)
         padding rem(4px) rem(10px)
         margin-right rem(2px)
         margin-bottom rem(8px)
         text-decoration none
         &:hover
-            color hover
-            border 1px solid hover
+            color accent
+            border 1px solid accent
+            background mainHover
 
 .img-rounded
     border-radius 50%
