--- a/src/styl/_footer.styl
+++ b/src/styl/_footer.styl
@@ -6,12 +6,14 @@
         font-size rem(30px)
 
 footer
-    background main
-    padding rem(25px) 0
-    margin-top 100px
-    clear both
-    p
-        mainFont(300)
-        color sec
-        text-align center
-        margin 0
+  background main
+  padding rem(25px) 0
+  margin-top 100px
+  clear both
+  p
+    mainFont(300)
+    color texts
+    text-align center
+    margin 0
+  a
+    color sec
