--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,1 +1,6 @@
+{% if jekyll.environment == 'production' %}
+<!-- VISA Tracking Code for https://choww.github.io --><script>(function(v,i,s,a,t){v[t]=v[t]||function(){(v[t].v=v[t].v||[]).push(arguments)};if(!v._visaSettings){v._visaSettings={}}v._visaSettings[a]={v:'1.0',s:a,a:'1',t:t};var b=i.getElementsByTagName('body')[0];var p=i.createElement('script');p.defer=1;p.async=1;p.src=s+'?s='+a;b.appendChild(p)})(window,document,'//app-worker.visitor-analytics.io/main.js','d917d699-90e6-11ec-b589-901b0edac50a','va')</script><!-- VISA Tracking Code for https://choww.github.io -->
+{% endif %}
+
 <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
+
